--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -19,24 +19,24 @@ body {
 }
 
 .sidebar {
-  width: 256px;
-  background-color: #1f2937;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  padding: 16px;
-  box-shadow: 4px 0 6px -1px rgba(0, 0, 0, 0.1), 2px 0 4px -2px rgba(0, 0, 0, 0.06);
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
-  flex-shrink: 0;
-  height: 97vh;
-  overflow: hidden;
+    width: 256px;
+    background-color: #1f2937;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    padding: 16px;
+    box-shadow: 4px 0 6px -1px rgba(0, 0, 0, 0.1), 2px 0 4px -2px rgba(0, 0, 0, 0.06);
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    flex-shrink: 0;
+    height: 97vh;
+    overflow: hidden;
 }
 
 .sidebar-content {
-  overflow-y: auto;
-  flex: 1;
-  padding-right: 4px; 
+    overflow-y: auto;
+    flex: 1;
+    padding-right: 4px;
 }
 
 .sidebar-title {
@@ -131,8 +131,8 @@ body {
 }
 
 .card-header-details a {
-  text-decoration: none;
-  color: #333;
+    text-decoration: none;
+    color: #333;
 }
 
 .header {
@@ -163,12 +163,48 @@ body {
     margin-right: 5px;
 }
 
+.search-container {
+    position: relative;
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto 20px auto;
+}
+
+.input-search {
+    width: 100%;
+    padding: 10px 40px 10px 12px;
+    /* padding right para espacio del icono */
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    outline: none;
+    transition: border-color 0.3s ease;
+    margin-top: 17px;
+    box-sizing: border-box;
+    /* importante para que ancho respete padding */
+}
+
+.input-search:focus {
+    border-color: #3498db;
+}
+
+.search-icon {
+    position: absolute;
+    right: 12px;
+    top: 68%;
+    transform: translateY(-50%);
+    color: #999;
+    pointer-events: none;
+    width: 20px;
+    height: 20px;
+}
+
 @media (max-width: 768px) {
     .sidebar {
         width: 80px;
         padding: 10px;
-        height: 98vh; 
-        overflow: hidden; 
+        height: 98vh;
+        overflow: hidden;
     }
 
     .sidebar-title {
@@ -269,5 +305,21 @@ body {
 
     .modal-content {
         max-width: 90%;
+    }
+
+    .search-container {
+        max-width: 90%;
+        padding: 0 10px;
+    }
+
+    .input-search {
+        font-size: 12px;
+        padding: 8px 36px 8px 10px;
+    }
+
+    .search-icon {
+        width: 16px;
+        height: 16px;
+        right: 20px;
     }
 }
