--- a/src/views/admin/variantes.ejs
+++ b/src/views/admin/variantes.ejs
@@ -1,10 +1,10 @@
 <%- include('../admin/dashboard.ejs') %>
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-<link rel="stylesheet" href="/css/sweetAlertAdmin.css">
-<link rel="stylesheet" href="/css/toastify.css">
-<link rel="stylesheet" href="/css/adminTable.css">
-<link rel="stylesheet" href="/css/error.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+  <link rel="stylesheet" href="/css/sweetAlertAdmin.css">
+  <link rel="stylesheet" href="/css/toastify.css">
+  <link rel="stylesheet" href="/css/adminTable.css">
+  <link rel="stylesheet" href="/css/error.css">
 
   <div class="main-content">
     <header class="header">
@@ -15,6 +15,10 @@
       <div class="card">
         <div class="card-header">
           <h2>Lista de Variantes</h2>
+          <div class="search-container">
+            <input type="text" id="searchVarianteInput" placeholder="Buscar variantes..." class="input-search" />
+            <i class="fa fa-search search-icon"></i>
+          </div>
           <button id="addVarianteBtn" class="add-button">
             <svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6">
@@ -39,47 +43,51 @@
           </table>
         </div>
       </div>
-    </div>
+  </div>
 
-      <div id="varianteModal" class="modal-overlay">
-        <div class="modal-content">
-          <h3 id="modalTitle" class="modal-title">Añadir Nueva Variante</h3>
-          <form id="varianteForm" class="modal-form">
-            <input type="hidden" id="varianteId">
-            <div class="form-group">
-              <label for="productoSelect">Producto:</label>
-              <select id="productoSelect" name="producto_id"></select>
-              <div class="error-text" data-error-for="producto_id"></div>
-            </div>
-            <div class="form-group">
-              <label for="varianteColor">Color:</label>
-              <input type="text" id="varianteColor" name="color">
-              <div class="error-text" data-error-for="color"></div>
-            </div>
-            <div class="form-group">
-              <label for="varianteStock">Stock:</label>
-              <input type="number" id="varianteStock" name="stock" min="0">
-              <div class="error-text" data-error-for="stock"></div>
-            </div>
-            <div class="form-group">
-              <label for="varianteImg">Imagen (URL):</label>
-              <input type="text" id="varianteImg" name="img">
-              <div class="error-text" data-error-for="img"></div>
-            </div>
-
-            <div class="modal-buttons">
-              <button type="button" id="cancelModalBtn" class="cancel-button">
-                Cancelar
-              </button>
-              <button type="submit" class="save-button">
-                Guardar
-              </button>
-            </div>
-          </form>
+  <div id="varianteModal" class="modal-overlay">
+    <div class="modal-content">
+      <h3 id="modalTitle" class="modal-title">Añadir Nueva Variante</h3>
+      <form id="varianteForm" class="modal-form">
+        <input type="hidden" id="varianteId">
+        <div class="form-group">
+          <label for="productoSelect">Producto:</label>
+          <select id="productoSelect" name="producto_id"></select>
+          <div class="error-text" data-error-for="producto_id"></div>
         </div>
-      </div>
+        <div class="form-group">
+          <label for="varianteColor">Color:</label>
+          <input type="text" id="varianteColor" name="color">
+          <div class="error-text" data-error-for="color"></div>
+        </div>
+        <div class="form-group">
+          <label for="varianteStock">Stock:</label>
+          <input type="number" id="varianteStock" name="stock" min="0">
+          <div class="error-text" data-error-for="stock"></div>
+        </div>
+        <div class="form-group">
+          <label for="varianteImg">Imagen (URL):</label>
+          <input type="text" id="varianteImg" name="img" placeholder="https://...">
+          <div class="error-text" data-error-for="img"></div>
+        </div>
+        <div class="form-group">
+          <label for="varianteImgFile">Imagen (Archivo):</label>
+          <input type="file" id="varianteImgFile" name="imgFile" accept="image/png, image/jpeg">
+          <div class="error-text" data-error-for="img"></div>
+        </div>
+        <div class="modal-buttons">
+          <button type="button" id="cancelModalBtn" class="cancel-button">
+            Cancelar
+          </button>
+          <button type="submit" class="save-button">
+            Guardar
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
 
-<script type="module" src="/js/adminVariant.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-<script src="https://unpkg.com/feather-icons"></script>
+  <script type="module" src="/js/adminVariant.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+  <script src="https://unpkg.com/feather-icons"></script>
