--- a/src/views/store/product.ejs
+++ b/src/views/store/product.ejs
@@ -189,16 +189,7 @@
 					<div id="tab1" class="tab-pane fade in active">
 						<div class="row">
 							<div class="col-md-12">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-									tempor
-									incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-									nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-									consequat.
-									Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-									eu
-									fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
-									in
-									culpa qui officia deserunt mollit anim id est laborum.</p>
+								<p><%= producto.descripcion %></p>
 							</div>
 						</div>
 					</div>
@@ -457,6 +448,7 @@
 	<%- include('../partials/footer.ejs') %>
 
 	</body>
+	
 	<script src="/js/buttonComparison.js"></script>
 	<script src="/js/stockColor.js"></script>
 	<script src="/js/rating.js" type="module"></script>
