--- a/src/views/admin/users.ejs
+++ b/src/views/admin/users.ejs
@@ -12,7 +12,7 @@
                 <div class="card-header">
                     <h2>Lista de Usuarios</h2>
                     <div class="search-container">
-                        <input type="text" id="searchUserInput" placeholder="Buscar variantes..."
+                        <input type="text" id="searchUserInput" placeholder="Buscar usuarios..."
                             class="input-search"/>
                         <i class="fa fa-search search-icon"></i>
                     </div>
