--- a/src/views/admin/accounts.ejs
+++ b/src/views/admin/accounts.ejs
@@ -60,7 +60,7 @@
       </div>
       <div class="form-group">
         <label for="confirmPassword">Confirmar Contraseña:</label>
-        <input type="password" id="confirmPassword" name="confirmPassword" required>
+        <input type="password" id="confirmPassword" name="confirmPassword">
         <div class="error-text" data-error-for="confirmPassword"></div>
       </div>
       <div class="modal-buttons">
